# cppsnippets

./: .gitignore  .vsignore  AppInfo.cmake  CMakeLists.restored  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE  README.md  cmake_test_discovery_e3b0c44298.json  create_test_files.ps1  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yaml
QtExploration/: CMakeLists.txt  README.md  appname_expansion_test.cpp  findexecutable_demo.cpp  locate_demo.cpp  locateall_demo.cpp  standardlocations_demo.cpp
_codeql_build_dir/: cppsnippets-config.cmake  cppsnippets_tests  cppsnippets_tests[1]_include.cmake  cppsnippets_tests[1]_tests.cmake  libcppsnippets.so.1  libcppsnippets.so.1.0.0
_codeql_build_dir/lib/: libgmock.so.1.14.0  libgmock_main.so.1.14.0  (+2 more)
cmake/: cppsnippets-config.cmake.in  scadtemplates-config.cmake.in
doc/: 2025-12-21-WORK.md  2025-12-22-Implementation-Status-Report.md  2025-12-25 Drag and Drop Plan.md  2025-12-25-GUI-Testing-Framework.md  2025-12-25-refactoring-Status-Report.md  2025-12-28-resource-location-enablement-refactoring.md  2025-12-29-phase1-unified-discovery.md  2026-01-03-Alignment-Analysis.md  2026-01-03-Phase1-Cleanup-Results.md  2026-01-03-resource-management-refactoring-plan.md  2026-01-04-phase1-complete.md  2026-01-04-phase1-step5-env-expansion.md  2026-01-05-phase2-discovery-pipeline-plan.md  2026-01-05-resource-discovery-architecture.md  2026-01-06-phase2a-discoveryscanner-detailed-design.md  2026-01-06-revised-discovery-architecture-analysis.md  2026-01-09-namespace-folder-reorganization-roadmap.md  2026-01-10-phase2a-revised-after-reorganization.md  2026-01-10-phase2b-resource-scanning.md  2026-01-10-responsibility-analysis-revised.md  2026-01-10-responsibility-analysis.md  2026-01-12-editsubtype-refactoring-findings.md  2026-01-12-parser-scanner-overlap-analysis.md  2026-01-12-resource-architecture-analysis.md  2026-01-12-template-scanning-fix-plan.md  2026-01-13-callback-scanner-refactor-UPDATED.md  2026-01-13-callback-scanner-refactor.md  2026-01-13-phase1-callback-infrastructure-results.md  2026-01-14-phase1-qvariant-registration-results.md  2026-01-14-qvariant-resource-architecture.md  2026-01-15-phase2-inventory-pipeline-complete.md  2026-01-16-aboutdialog-integration-results.md  2026-01-16-template-file-io-design-discussion.md  2026-01-18-gui-template-panel-survey.md  2026-01-18-location-based-template-indexing.md  2026-01-18-location-indexing-corrected-plan.md  2026-01-19-qt-model-view-architecture.md  2026-01-20-multi-resource-tabbed-ui.md  2026-01-20-phase1-examples-inventory-results.md  2026-01-21-phase1-examples-inventory-results.md  (+15 more)
lib/: snippet.schema.json
scripts/: README.md  build-all-tests.ps1  build-all-unit-tests.ps1  run-all-unit-tests.ps1  setup-path.ps1
src/: edittype.cpp  extnOSVersRef.cpp  filetype.cpp  legacy_template_converter.cpp  platformInfo.cpp  resourceLocationManager.cpp  resourcePaths.cpp  scad_template_session.cpp  scadtemplates_version.cpp  scadtemplates_version.cpp.in  snippet.cpp  snippets.cpp  template.cpp  template_manager.cpp  template_parser.cpp
src-orig/: README.md  insertSnippet.ts  mainThreadEditor.ts  snippetCompletionProvider.ts  snippetController2.ts  snippetSession.ts  snippetsService.ts
src/jsonreader/jsonreader-portable/: CMakeLists.txt  README.md
src/jsonreader/jsonreader-portable/_install/lib/cmake/JsonReaderPortable/: JsonReaderPortableConfig.cmake  JsonReaderPortableTargets-noconfig.cmake
src/jsonreader/jsonreader-portable/cmake/: JsonReaderPortableConfig.cmake.in
src/jsonreader/jsonreader-portable/examples/: ConsumerCMakeLists.cmake
src/jsonreader/jsonreader-portable/src/: JsonReader.cc
src/jsonreader/jsonreader-portable/tests/: jsonreader_qttest.cpp  test_jsonreader_files.cpp
src/jsonreader/jsonreader-portable/tests/data/: README.md
src/jsonreader/jsonreader-portable/tests/data/drag-drop-junk/: error-unterminated-object.json  error-unterminated-string.json  example-dir.json  pers_template_custom_box.json
src/jsonreader/jsonreader-portable/tests/data/inst/OpenSCAD/color-schemes/editor/: bad-invalid-hex.json  bad-negative-values.json
src/jsonreader/jsonreader-portable/tests/data/inst/OpenSCAD/templates/: inst_template_sphere_param.json
src/jsonwriter/jsonwriter-portable/: CMakeLists.txt  README.md
src/jsonwriter/jsonwriter-portable/cmake/: JsonWriterPortableConfig.cmake.in
src/jsonwriter/jsonwriter-portable/include/JsonWriter/: JsonWriter.hpp
src/jsonwriter/jsonwriter-portable/src/: JsonWriter.cc
src/jsonwriter/jsonwriter-portable/tests/: jsonwriter_qttest.cpp  test_jsonwriter_files.cpp  test_jsonwriter_validator.cpp
src/utils/: CMakeLists.txt  appsTab.cpp  appsTab.hpp  generalTab.cpp  generalTab.hpp  permsTab.cpp  permsTab.hpp  qt_standardpaths_displaynames.cpp  tabDialog.cpp  tabDialog.hpp  tabDialogMain.cpp  tabdialog_example.cpp
templates/: jeffdoc_sh_orig.json  linear_extrude_mod1.json  param_gear_mod1.json  standard-OpenSCAD.json
tests/: resourceScanner_minimal.cpp  resourceScanner_test.hpp  testAppNameInfo.hpp  test_attachment_scanning.cpp  test_callback_scanner.cpp  test_editsubtype.cpp  test_edittype.cpp  test_examples_inventory.cpp  test_examples_tree.cpp  test_filesubtype.cpp  test_filetype.cpp  test_main.cpp  test_path_discovery.cpp  test_resource_discovery.cpp  test_resource_location_manager.cpp  test_resource_metadata_comprehensive.cpp  test_resource_paths.cpp  test_resource_scanner.cpp  test_resourcelocation.cpp  test_sa_discovery_inventory.cpp  test_sa_examples_discovery.cpp  test_sa_examples_tree.cpp  test_sa_fonts_tree.cpp  test_sa_inventory_tree.cpp  test_sa_location_discovery.cpp  test_sa_path_discovery.cpp  test_sa_scanner_output.cpp  test_sa_templates_discovery.cpp  test_sa_tier.cpp  test_scad_template_session.cpp  test_scanexamples.cpp  test_scantomodel.cpp  test_simple.cpp  test_snippet.cpp  test_snippet_manager.cpp  test_snippet_parser.cpp  test_snippet_session.cpp  test_template.cpp  test_template_inventory.cpp  test_template_manager.cpp  (+16 more)
toolcheck/: CMakeLists.txt  main.cpp
(+288 files in other folders)
